--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <link rel="stylesheet" href="styles/normalize.css">
-  <title>React App</title>
+  <title>Links Shortener</title>
 </head>
 
 <body>
